2002-02-04  Havoc Pennington  <hp@redhat.com>

	* gconf/Makefile.am (regenerate-built-sources): give up and check
	stupid enum sources in to CVS and require manual rebuild.

	* configure.in: bump to 1.1.7, do library versioning.
	Default bdb backend to disabled, since I don't think 
	it's being actively used/tested.

	* autogen.sh: use automake-1.4 aclocal-1.4 if found

2002-02-02  jacob berkman  <jacob@ximian.com>

	* gconf/Makefile.am: re-enable explicit dependency on built
	sources, as it doesn't build otherwise.

2002-02-01  Havoc Pennington  <hp@pobox.com>

	* gconf/Makefile.am: include the *.sh scripts

	* gconf/regenerate-enum-footer.sh: fix screwup that broke build

2002-02-01  Havoc Pennington  <hp@redhat.com>

	* gconf/Makefile.am: move the complicated enum rules into small
	shell scripts (regenerate-enum-*.sh), rename CORBA_SOURCES to 
	CORBA_SOURCECODE

2002-01-28  Michael Meeks  <michael@ximian.com>

	* gconf/gconf-database.c: warning cleans.
	(impl_ConfigDatabase3_add_listener_with_properties):
	init name.
	(gconf_database_add_listener): right args for format.

	* gconf/gconf-client.c: warning cleans.

	* gconf/gconf-internals.c (gconf_orb_release):
	return shutdown status.

	* gconf/gconf.c (gconf_detach_config_server):
	privatize again, and split out ORB shutdown into
	(gconf_debug_shutdown): here.

2002-01-25  Michael Meeks  <michael@ximian.com>

	* gconf/gconf.c (try_to_contact_server): release the
	server reference, if it's to a duff object.
	(gconf_get_config_listener): strip local 'listener',
	since we have a static module global for that.
	(gconf_detach_config_server): release the listener.
	(gconf_get_config_listener): release the poa & manager
	references.

	* tests/testgconf.c (main): add
	gconf_detach_config_server

	* gconf/gconf-internals.c
	(gconf_orb_get): remove bonobo activation
	worries, kill bogus fiddling with the default
	context.
	(gconf_orb_release): impl.

	* gconf/gconf.c (gconf_detach_config_server):